// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Table component 1`] = `
<table
  className="flixgrid-table"
>
  <tbody>
    <tr
      className="flixgrid-tr "
    >
      <td
        className="flixgrid-td-empty"
        colSpan={0}
      >
        No data
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders a TableBody component 1`] = `
<tbody>
  <tr
    className="flixgrid-tr "
  >
    <td
      className="flixgrid-td-empty"
      colSpan={0}
    >
      No data
    </td>
  </tr>
</tbody>
`;

exports[`renders a TableData component 1`] = `
<td
  className="flixgrid-td"
/>
`;

exports[`renders a TableHead component 1`] = `
<thead>
  <tr
    className="false flixgrid-thead"
  />
</thead>
`;

exports[`renders a TableRow component 1`] = `
<tr
  className="flixgrid-tr "
/>
`;
